# Clinic_ERP_Project

./: .dockerignore  .gitignore  .npmrc  AWS_EC2_DEPLOYMENT_GUIDE.md  COMPLETE_DEPLOYMENT_GUIDE.md  COMPLETE_DEPLOYMENT_GUIDE_V2.md  CSV_EXCEL_IMPORT_GUIDE.md  CSV_IMPORT_TESTING.md  CSV_IMPORT_TESTING_FINAL.md  CYBER_ATTACK_MONITORING_GUIDE.md  DEPLOY.md  DEPLOYMENT_SCRIPT_GUIDE.md  DEPLOYMENT_STEP_BY_STEP.md  DEPLOYMENT_WORKFLOW.md  DOCKER_DEPLOYMENT_GUIDE.md  EDIT_PAGE_COMPLETE_SUMMARY.md  EDIT_PAGE_FINAL_FIX.md  EDIT_PAGE_FIX_SUMMARY.md  FRONTEND_VPS_DEPLOY.md  IMPLEMENTATION_SUMMARY_CLINIC_VALIDATION.md  INBOUND_QTY_SMART_UPDATE_FIX.md  NGINX_HTTPS_SETUP_GUIDE.md  PORTFOLIO_TECH_STACK.md  POSTGRES_EXPORTER_SETUP.md  POSTMAN_TEST_GUIDE.md  PRODUCTION_CHECKLIST.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_DOCS_README.md  PRODUCTION_ISSUES_SUMMARY.md  PRODUCTION_READINESS_CHECKLIST.md  PROJECT_SECURITY_TODO_LIST.md  QUICK_DEPLOY_GUIDE.md  QUICK_FIX_GUIDE.md  SETUP.md  SUBDOMAIN_CONFIGURATION_GUIDE.md  SUPABASE_STORAGE_MIGRATION.md  SUPABASE_STORAGE_MONITORING.md  SUPPLIER_BUG_FIX.md  SUPPLIER_COMPLETE_DEBUG.md  SUPPLIER_MANUAL_EDIT_IMPLEMENTATION.md  (+16 more)
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.local.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md  icon.icns
apps/desktop/src-tauri/permissions/: allow-show-native-notification.toml
apps/desktop/src-tauri/src/: lib.rs  macos_notify.rs  main.rs
deploy-scripts/: copy-migrations-to-vps.sh  deploy-production.sh  deploy.sh
(+799 files in other folders)
